<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="Add">Add</string>
    <string name="Reset">Reset</string>
    <string name="Instructions">Instructions</string>
    <string name="Adventure">Adventure</string>
    <string name="Animation">Animation</string>
    <string name="Comedy">Comedy</string>
    <string name="Fantasy">Fantasy</string>
    <string name="File">Save As a File</string>
    <string name="Horror">Horror</string>
    <string name="MovieName">Movie Name</string>
    <string name="ToWatched">To Be Watched</string>
    <string name="Watched">Watched</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">MoviesData</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="title_activity_movies_list">MoviesList</string>
    <string name="title_activity_movies_status">MoviesStatus</string>
    <string name="title_activity_instructions">Instructions</string>
    <string name="title_activity_delete">DeleteActivity</string>
</resources>
