<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:fillViewport="false"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <RelativeLayout
        android:gravity="center_horizontal"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@drawable/movieimage"
        android:scaleType = "centerCrop"

        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/movies"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:textColor="#25383C"
            android:text="Movies!!!!!!"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/watched"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/movies"
            android:layout_height="wrap_content"
            android:textColor="#25383C"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:text="Watched"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/towatch"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/movies"
            android:layout_height="wrap_content"
            android:textColor="#25383C"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:text="ToBeWatched"
            android:textSize="20sp" />

        <Button
            android:background="#fffa872e"
            android:id="@+id/adventure"
            android:layout_below="@+id/watched"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:onClick="onAdventure"
            android:text="@string/Adventure" />

        <Button
            android:id="@+id/animation"
            android:layout_below="@+id/adventure"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:onClick="onAnimation"
            android:text="@string/Animation" />

        <Button
            android:background="#ff5a58fa"
            android:id="@+id/comedy"
            android:layout_below="@+id/animation"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:onClick="onComedy"
            android:text="@string/Comedy" />

        <Button
            android:background="#fffa2842"
            android:id="@+id/horror"
            android:layout_below="@+id/comedy"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:onClick="onHorror"
            android:text="@string/Horror" />

        <Button
            android:background="#ffe579fa"
            android:id="@+id/fantasy"
            android:layout_below="@+id/horror"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:onClick="onFantasy"
            android:text="@string/Fantasy" />

        <Button
            android:background="#ff97e4fa"
            android:id="@+id/file"
            android:layout_below="@+id/fantasy"
            android:layout_alignParentLeft="true"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:onClick="onFile"
            android:text="@string/File" />

        <Button
            android:background="#ff97e4fa"
            android:id="@+id/reset"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/fantasy"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:onClick="onReset"
            android:text="@string/Reset" />

        <Button
            android:background="#ff97e4fa"
            android:id="@+id/instructions"
            android:layout_below="@+id/reset"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:onClick="onInstructions"
            android:text="@string/Instructions"
            android:layout_centerHorizontal="true"/>


    </RelativeLayout>
</ScrollView>
